# OpenEmu

./: .gitignore  .gitmodules  .lldbinit  CONTRIBUTING.md  CRTMaskReg.psd  CRTMaskShadow.psd  CRTMaskStaggered.tiff  CRTMaskStaggeredScanlineOnly.psd  CRTMaskStraight.tiff  ControlPreferences.xib  CoreDownloader.xib  Filters.h  GameApp.h  GameApp.m  GameAudio.h  GameAudio.m  GameAudio.mm  GameBuffer.h  GameBuffer.m  GameBuffer.mm  GameButton.h  GameButton.m  GameButtons.h  GameCore.h  GameCore.m  GameCore.mm  GameCoreBase.h  GameCoreBase.m  GameCoreOld.m  GameDocument.h  GameDocument.m  GameDocumentController.h  GameDocumentController.m  GameInput.h  GameInput.m  GameLayer.h  GameLayer.m  GamePickerController.h  GamePickerController.m  GamePreferences.xib  (+150 more)
Atari800/kat5200/sql/: Bright.xml.sql  Default.xml.sql  DefaultPal.xml.sql  Dull.xml.sql  Green.xml.sql  Makefile.am  Makefile.in  Nabuko52.xml.sql  RealRF.xml.sql  Schema.sql  dat2sql.pl  file2dat.pl  pal2sql.pl
FreeDO/libcue-1.4.0/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
FreeDO/libcue-1.4.0/config/: ltmain.sh
Handy/handysource/lynx/: Makefile  Makefile.am  cart.h  ram.h  susie.cpp  system.cpp
Mednafen/mednafen/: FileWrapper.cpp  FileWrapper.h  Makefile.am  cdplay.cpp  clamp.h  debug.h  dis6280.cpp  dis6502.cpp  dis6502.h  driver.h  endian.h  error.h  file.cpp  file.h  general.h  gettext.h  lepacker.h  math_ops.cpp  math_ops.h  md5.cpp  mednafen.h  memory.cpp  mempatcher.h  okiadpcm-deltatable.h  okiadpcm.cpp  okiadpcm.h  okiadpcm_generate.cpp  player.h  psf.cpp  qtrecord.cpp  qtrecord.h  settings-common.h  settings.cpp  state.cpp  state.h  tests.h  types.h
Mednafen/mednafen/cdrom/: Makefile.am.inc  SimpleFIFO.cpp  cdromfile.cpp  cdromfile.h  cdromif.cpp  cdromif.h  crc32.cpp  dvdisaster.h  galois-inlines.h  galois.cpp  l-ec.cpp  lec.cpp  pcecd.cpp  scsicd-pce-commands.inc
Mednafen/mednafen/compress/: blz.c  blz.h  lzodefs.h  minilzo.c  minilzo.h  quicklz.h  unzip.c
Mednafen/mednafen/demo/: Makefile.am  Makefile.in  demo.cpp
Mednafen/mednafen/desa68/: Makefile.am  desa68  desa68.c  desa68.h
Mednafen/mednafen/drivers/: 2xSaI.h  Makefile.am  args.h  cheat.cpp  cheat.h  console.h  debugger.cpp  debugger.h  ers.cpp  ers.h  fps.cpp  fps.h  gfxdebugger.cpp  gfxdebugger.h  help.h  hq2x.cpp  hq4x.cpp  hqxx-common.cpp  hqxx-common.h  icon.h  input-config.cpp  input-default-buttons.h  input.cpp  input.h  joystick.cpp  logdebugger.cpp  main.cpp  memdebugger.cpp  memdebugger.h  netplay.cpp  netplay.h  nnx.cpp  nongl.cpp  opengl.cpp  opengl.h  overlay.cpp  overlay.h  scale2x.h  scale3x.h  shader.cpp  (+4 more)
Mednafen/mednafen/gb/: Makefile.am  gb.cpp  gb.h  gbCodes.h  gbCodesCB.h  gbGlobals.cpp  gfx.cpp  memory.h  z80.h
Mednafen/mednafen/gba/: GBA.h  GBAinline.h  Gfx.cpp  Globals.cpp  Globals.h  Makefile.in  Mode0.cpp  Mode1.cpp  Mode2.cpp  Mode3.cpp  Mode5.cpp  Port.h  RTC.cpp  Sound.cpp  arm.cpp  bios.cpp  bios.h  eeprom.h  flash.cpp  gfx-draw.h  sram.cpp  thumb.cpp  thumb.h
Mednafen/mednafen/hw_cpu/: Makefile.am  Makefile.in
Mednafen/mednafen/hw_misc/: Makefile.am  Makefile.in
Mednafen/mednafen/hw_sound/: Makefile.am  Makefile.in
Mednafen/mednafen/hw_video/: Makefile.am  Makefile.in
Mednafen/mednafen/lynx/: c6502mak.h  c65c02.cpp  c65c02.h  cart.cpp  cart.h  lynxdef.h  machine.h  memmap.cpp  memmap.h  mikie.cpp  mikie.h  ram.cpp  ram.h  rom.cpp  susie.cpp  susie.h  system.cpp
Mednafen/mednafen/md/: Makefile.am  cpuintrf.h  debug.h  genesis.cpp  genio.cpp  genio.h  hcnt.h  header.h  hvc.h  macros.h  mem68k.h  membnk.cpp  membnk.h  memvdp.h  memz80.cpp  memz80.h  osd_cpu.h  shared.h  sound.cpp  sound.h  system.cpp  vcnt.h  vdp.cpp  vdp.h  vdp_run.inc
Mednafen/mednafen/mpcdec/: ChangeLog  Makefile.in  requant.c  streaminfo.c
Mednafen/mednafen/nes/: Makefile.in  cart.h  debug.cpp  debug.h  fds-sound.cpp  fds-sound.h  filter.cpp  filter.h  ines-bad.h  ines.cpp  ines.h  input.cpp  input.h  nes.cpp  nes.h  nsf.cpp  nsf.h  nsfe.cpp  sound.cpp  sound.h  unif.cpp  unif.h  vsuni.cpp  x6502.cpp  x6502.h  x6502struct.h
Mednafen/mednafen/ngp/: T6W28_Apu.cpp  T6W28_Apu.h  Z80_interface.cpp  Z80_interface.h  bios.cpp  bios.h  biosHLE.cpp  dma.h  flash.h  gfx.h  gfx_scanline_colour.cpp  gfx_scanline_mono.cpp  interrupt.cpp  interrupt.h  mem.h  neopop.cpp  rtc.cpp  sound.cpp  sound.h
Mednafen/mednafen/pce/: EVENT_SYSTEM_NOTES  Makefile.in  debug.cpp  hes.cpp  huc.cpp  pce.h  vce.cpp  vce.h  vce_sync.inc
Mednafen/mednafen/pce_fast/: Makefile.in  hes.cpp  hes.h  huc.cpp  huc6280.cpp  huc6280.h  huc6280_ops.inc  pce.cpp  pce.h  vdc.cpp  vdc.h  vpc_mix_inner.inc
Mednafen/mednafen/pcfx/: Makefile.in  debug.cpp  fxscsi.cpp  fxscsi.h  gamedb.inc  huc6273.cpp  input.h  interrupt.h  jrevdct.cpp  king-bgfast-blit.inc  king-bgfast.inc  king.cpp  king.h  king_mix_body.inc  mem-handler.inc  pcfx.h  rainbow.cpp  timer.h
Mednafen/mednafen/sexyal/: README  convert.h  sexyal.h
Mednafen/mednafen/sms/: Makefile.am  Makefile.in  cart.cpp  cart.h  hvc.inc  memz80.cpp  memz80.h  pio.cpp  render.cpp  romdb.cpp  romdb.h  shared.h  sms.cpp  system.cpp  system.h  tms.cpp  tms.h  vdp.cpp  vdp.h
Mednafen/mednafen/snes/: Makefile.am  Makefile.in  VERSION.BSNES  interface.cpp
Mednafen/mednafen/sound/: Blip_Buffer.cpp  Fir_Resampler.cpp  Makefile.am  Makefile.in  Stereo_Buffer.cpp  WAVRecord.cpp
Mednafen/mednafen/string/: ConvertUTF.cpp  Makefile.am.inc  escape.h  world_strtod.c  (+1 more)
Mednafen/src/: Blip_Buffer.cpp  Makefile.am  Makefile.in  Ym2612_Emu.cpp  Ym2612_Emu.h  clamp.h  cputest.cpp  debug.cpp  debug.h  dis6280.h  dis6502.cpp  dis6502.h  driver.h  endian.cpp  endian.h  error.cpp  error.h  file.cpp  file.h  general.cpp  general.h  git.h  md5.cpp  md5.h  mednafen-driver.h  mednafen.cpp  mednafen.h  memory.cpp  memory.h  mempatcher-driver.h  mempatcher.cpp  movie-driver.h  movie.cpp  netplay-driver.h  netplay.cpp  netplay.h  player.cpp  player.h  psf.cpp  psf.h  (+13 more)
Meteor/Core/: CMakeLists.txt  System.h  Util.cpp  Util.h
(+16525 files in other folders)
