# Makefile.am for sqlite file included in the distribution

sysconfdir = /etc/kat5200
dist_sysconf_DATA = kat5200.db3

EXTRA_DIST = Atari-Other-Carts.dat Atari-Other-Carts_800.dat \
             dat2sql.pl file2dat.pl pal2sql.pl \
             Bright.xml.sql Default.xml.sql DefaultPal.xml.sql \
			 Dull.xml.sql Green.xml.sql RealRF.xml.sql Nabuko52.xml.sql \
             Schema.sql

