AUTOMAKE_OPTIONS = subdir-objects
DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@ @MATH_OPTIMIZER_FLAGS@
DEFAULT_INCLUDES = -I$(top_builddir)/include -I$(top_srcdir)/intl -I$(top_builddir)/include/blip -I$(top_srcdir)

noinst_LIBRARIES        =       libmdfnhwmisc.a

libmdfnhwmisc_a_SOURCES        = arcade_card/arcade_card.cpp

